# Game-python-with-pygame

./: Makefile  carte.tmx  game.py  pyproject.toml
resources/: carte.tmx
src/: game.py  main.py  utils.py
