[project]
name = "Game-python-with-pygame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pyscroll>=2.31",
    "pytmx>=3.32",
]

[project.urls]
Homepage = "https://github.com/Artarand/Game-python-with-pygame/tree/main"

[project.scripts]
shifumi = "main:main_cli"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
no_implicit_optional = true
ignore_missing_imports = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
files = ["src/**/*.py", "tests/**/*.py"]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
